# blis

./: .gitignore  Cargo.toml  Makefile.toml  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: dependencies.yml  pull_request.yml
src/: bytecode.rs  compile.rs  lib.rs  main.rs  parse.rs  testing.rs  vm.rs
src/bytecode/: chunk.rs  disassembly.rs  mod.rs  op.rs
src/parse/: ast.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/runtime/: func.rs  heap.rs  host.rs  mod.rs  object.rs  strings.rs  upvalue.rs  value.rs
src/snapshots/: blis__compile__tests__test_programs__closures_math.blis.chunk.snap  blis__compile__tests__test_programs__closures_math.blis.chunk.snap.new  blis__compile__tests__test_programs__closures_objects.blis.chunk.snap  blis__compile__tests__test_programs__closures_objects.blis.chunk.snap.new  blis__compile__tests__test_programs__closures_stress.blis.chunk.snap  blis__compile__tests__test_programs__closures_stress.blis.chunk.snap.new  blis__compile__tests__test_programs__empty_type.blis.chunk.snap  blis__compile__tests__test_programs__err_compile__break_label_missing.blis.errors.snap  blis__compile__tests__test_programs__err_compile__continue_label_missing.blis.errors.snap  blis__compile__tests__test_programs__err_compile__duplicate_variable.blis.errors.snap  blis__compile__tests__test_programs__err_compile__self_outside_method_associated.blis.errors.snap  blis__compile__tests__test_programs__err_compile__self_outside_method_func.blis.errors.snap  blis__compile__tests__test_programs__err_compile__self_outside_method_script.blis.errors.snap  blis__compile__tests__test_programs__err_runtime__bad_math.blis.chunk.snap  blis__compile__tests__test_programs__err_runtime__bad_math_1.blis.chunk.snap  blis__compile__tests__test_programs__err_runtime__bad_math_2.blis.chunk.snap  blis__compile__tests__test_programs__err_runtime__redeclare_global.blis.chunk.snap  (+61 more)
test_programs/: closures_math.blis  closures_objects.blis  closures_stress.blis  empty_type.blis  fibonacci.blis  floats.blis  hello.blis  if.blis  lists.blis  logic.blis  loops.blis  math.blis  multiline_strings.blis  objects.blis  scope.blis  scope_1.blis  scope_2.blis  scope_stress.blis  sieve.blis  string_escapes.blis  strings.blis
(+89 files in other folders)
